# modern-cpp-kafka

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md
.github/workflows/: kafka_api_bazel_build.yml  kafka_api_ci_tests.yml  kafka_api_gen_doc.yml
customrules/: gtest.BUILD  librdkafka.BUILD  rapidjson.BUILD
demo_projects_for_build/conan_build/: CMakeLists.txt
examples/: BUILD.bazel  example_KafkaClient_Callbacks.cc  example_KafkaConsumer_ManualOffsetCommit.cc  example_KafkaConsumer_Simple.cc  example_KafkaProducer_DeepCopy.cc  example_KafkaProducer_EnableManualEventsPoll.cc  example_KafkaProducer_Lifecycle.cc  example_KafkaProducer_Simple.cc  example_ProducerRecordHeaders.cc  example_Properties.cc  kafka_async_producer_copy_payload.cc  kafka_async_producer_not_copy_payload.cc  kafka_sync_producer.cc
include/kafka/: AdminClient.h  ClientConfig.h  ConsumerCommon.h  ConsumerRecord.h  Error.h  Header.h  KafkaClient.h  KafkaConsumer.h  KafkaProducer.h  Log.h  ProducerCommon.h  ProducerRecord.h  Project.h  Properties.h  Timestamp.h  Types.h  Utility.h
include/kafka/addons/: KafkaMetrics.h  KafkaRecoverableProducer.h  UnorderedOffsetCommitQueue.h
scripts/: start-local-kafka-cluster.py
scripts/cluster-setup/: app_recipe.py  generate-scripts.py  server.properties.template  simple-local-cluster.yaml  zookeeper.properties.template
src/: rdkafka.c  rdkafka.h
tests/: BUILD.bazel  CMakeLists.txt
tests/integration/: TestAdminClient.cc  TestKafkaConsumer.cc  TestKafkaProducer.cc  TestKafkaRecoverableProducer.cc  TestTransaction.cc
tests/robustness/: TestAdminClient.cc  TestKafkaConsumer.cc  TestKafkaProducer.cc  TestTransaction.cc
tests/unit/: TestBrokerMetadata.cc  TestConsumerRecord.cc  TestHeader.cc  TestKafkaMetrics.cc  TestProducerRecord.cc  TestProperties.cc  TestTypes.cc  TestUnorderedOffsetCommitQueue.cc
tests/utils/: TestUtility.h
tools/: CMakeLists.txt  KafkaThroughputMonitor.cc
tools/console_clients/: BUILD.bazel  CMakeLists.txt  KafkaConsoleConsumer.cc  KafkaConsoleProducer.cc  KafkaConsumerPerfTest.cc  KafkaPerfBenchmark.cc  KafkaProducerPerfTest.cc  KafkaTopics.cc
tools/messaging_benchmark/: CMakeLists.txt  README.md
tools/messaging_benchmark/app/: Benchmark.cc  Benchmark.h  CMakeLists.txt  main.cc
tools/messaging_benchmark/include/: message_poller_api.h  message_receiver_api.h  message_sender_api.h  receiver_test_api.h  sender_test_api.h
tools/messaging_benchmark/lib/: CMakeLists.txt
tools/messaging_benchmark/lib/message_transmitter/: CMakeLists.txt
tools/messaging_benchmark/lib/message_transmitter/grpc/: CMakeLists.txt  grpc_async_sender.cc  grpc_async_server.cc  grpc_callback_sender.cc  grpc_callback_server.cc  grpc_sync_sender.cc  grpc_sync_server.cc
tools/messaging_benchmark/lib/message_transmitter/grpc/proto/: PerfTestMsg.proto  gen_code.sh
tools/messaging_benchmark/lib/message_transmitter/kafka/: CMakeLists.txt  kafka_async_sender.cc  kafka_sync_sender.cc
tools/messaging_benchmark/lib/message_transmitter/stub/: CMakeLists.txt  sender_stub.cc
tools/messaging_benchmark/lib/test_runner/: CMakeLists.txt  Statistics.h  single_speed_send_test.cc
tools/messaging_benchmark/utility/: JsonText.h  Timestamp.h
tools/perf/: BUILD.bazel  CMakeLists.txt  KafkaEndToEndLatencyTest.cc  KafkaProducerPerfTest.cc
