load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "kafka_sync_producer",

    srcs = ["kafka_sync_producer.cc"],

    deps = ["//:modern-cpp-kafka-api",
            "@librdkafka//:rdkafka"],
)

cc_binary(
    name = "kafka_async_producer_copy_payload",

    srcs = ["kafka_async_producer_copy_payload.cc"],

    deps = ["//:modern-cpp-kafka-api",
            "@librdkafka//:rdkafka"],
)

cc_binary(
    name = "kafka_async_producer_not_copy_payload",

    srcs = ["kafka_async_producer_not_copy_payload.cc"],

    deps = ["//:modern-cpp-kafka-api",
            "@librdkafka//:rdkafka"],
)

cc_binary(
    name = "kafka_auto_commit_consumer",

    srcs = ["kafka_auto_commit_consumer.cc"],

    deps = ["//:modern-cpp-kafka-api",
            "@librdkafka//:rdkafka"],
)

cc_binary(
    name = "kafka_manual_commit_consumer",

    srcs = ["kafka_manual_commit_consumer.cc"],

    deps = ["//:modern-cpp-kafka-api",
            "@librdkafka//:rdkafka"],
)
