load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "kafka-unit-test",

    srcs = glob(["unit/*.cc", "utils/*.h"]),

    copts = ["-std=c++23"],

    deps = ["//:modern-cpp-kafka-api",
            "@gtest//:gtest",
            "@gtest//:gtest_main",
            "@rapidjson//:rapidjson",
            "@librdkafka//:rdkafka"],

    timeout = "short",

    tags = ["unit"],
)


cc_test(
    name = "kafka-integration-test",

    srcs = glob(["integration/*.cc", "utils/*.h"]),

    copts = ["-std=c++23"],

    deps = ["//:modern-cpp-kafka-api",
            "@gtest//:gtest",
            "@gtest//:gtest_main",
            "@librdkafka//:rdkafka"],

    timeout = "long",
    shard_count = 8,

    tags = ["integration"],
)

cc_test(
    name = "kafka-robustness-test",

    srcs = glob(["robustness/*.cc", "utils/*.h"]),

    copts = ["-std=c++23"],

    deps = ["//:modern-cpp-kafka-api",
            "@gtest//:gtest",
            "@gtest//:gtest_main",
            "@librdkafka//:rdkafka"],

    timeout = "long",
    shard_count = 1,

    tags = ["robustness"],
)
