load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "kafka-topics",

    srcs = ["KafkaTopics.cc"],

    deps = ["//:modern-cpp-kafka-api",
            "@librdkafka//:rdkafka"],
)

cc_binary(
    name = "kafka-console-consumer",

    srcs = ["KafkaConsoleConsumer.cc"],

    deps = ["//:modern-cpp-kafka-api",
            "@librdkafka//:rdkafka"],
)

cc_binary(
    name = "kafka-console-producer",

    srcs = ["KafkaConsoleProducer.cc"],

    deps = ["//:modern-cpp-kafka-api",
            "@librdkafka//:rdkafka"],
)

cc_binary(
    name = "kafka-producer-perf-test",

    srcs = ["KafkaProducerPerfTest.cc"],

    deps = ["//:modern-cpp-kafka-api",
            "@librdkafka//:rdkafka"],
)

cc_binary(
    name = "kafka-consumer-perf-test",

    srcs = ["KafkaConsumerPerfTest.cc"],

    deps = ["//:modern-cpp-kafka-api",
            "@librdkafka//:rdkafka"],
)
